--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@ Don't forget to star the repo
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/functions.js"></script>
-    <script src="assets/js/saavn-search.js"></script>
+    <script src="assets/js/functions.js?v=1"></script>
+    <script src="assets/js/saavn-search.js?v=1"></script>
 </body>
 
 </html>
